<resources>
    <string name="app_name">AKAI Notes</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj się</string>
    <string name="old_passwordd">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="change_password">Zmień hasło</string>
    <string name="accept_terms">Akceptuję regulamin użytkownika</string>
    <string name="send_mail">Send mail</string>
    <string name="edit">Edit</string>
    <string name="note_delete_question">Czy napewno chcesz usunąć notatkę?</string>
    <string name="click_to_add_note">Naciśnij, żeby dodać notatkę</string>
    <string name="title">Tytuł</string>
    <string name="note_content">Treść notatki</string>
    <string name="add_note">Dodaj notatkę</string>
    <string name="save">Zapisz</string>
    <string name="click_to_go_back">Naciśnij, aby wrócić do poprzedniego ekranu.</string>
    <string name="click_to_go_backa">click_to_go_back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userimage">userImage</string>
    <string name="username">userName</string>
    <string name="click_to_user_information">click to user information</string>
</resources>
